# mod-xslt

./: CREDITS  ChangeLog  Makefile.in  NOTES  README  TODO  acinclude.m4  aclocal.m4  configure  configure.ac  mod-xslt.spec
debian/: 00list  01_fix_autotools.dpatch  02_sapi_apache1_makefile.dpatch  03_fix_apache2_modxslt_c.dpatch  500modxslt.info  changelog  control  copyright  libapache2-modxslt.README.Debian  libapache2-modxslt.config  libapache2-modxslt.dirs  libapache2-modxslt.install  libapache2-modxslt.prerm  libmodxslt0-dev.install  libmodxslt0-dev.manpages  libmodxslt0.install  libmodxslt1-dev.dirs  libmodxslt1-dev.install  libmodxslt1.install  modxslt-tools.install  modxslt-tools.manpages  modxslt.libapache  modxslt.libapache2  modxslt.load  rules
doc/: Makefile
doc/dev/: cacheing.txt  loop-handling.txt
doc/faq/: Makefile  faq.fo  faq.html  faq.ps  faq.xml
doc/faq/css/: faq.css
doc/faq/dtd/: faq.dtd
doc/faq/xslt/: config.xsl  faq-fo.xsl  faq-html.xsl
doc/man/: Makefile.in  modxslt-config.1  modxslt-config.xml  modxslt-parse.1  modxslt-parse.xml  modxslt-perror.1  modxslt-perror.xml  prototype.xml
doc/manual/: Makefile  manual.ps  manual.rtf  manual.tex  manual.txt  manual.xml
doc/manual/manual/: index.html  x157.html  x164.html  x18.html  x187.html  x239.html  x27.html  x417.html  x44.html  x440.html  x49.html  x629.html  x669.html  x675.html  x807.html  x830.html  x847.html  x853.html  x870.html
doc/misc/: DONE  comparison.txt  why.txt
doc/patches/: Makefile  patches.ps  patches.rtf  patches.tex  patches.txt  patches.xml
doc/patches/patches/: index.html  x12.html  x18.html  x34.html
doc/site/: README  about.xml  credits.xml  cvs.xml  download.xml  intro.xml  legals.xml  screenshot.xml  site.xml  standards.xml  todo.xml  users.xml
doc/xslt/: LICENSE  README  config.xsl  skel.xml  translator.xsl
doc/xslt/faq/: faq.xsl
doc/xslt/rep/: description.xml  repository.xsl
doc/xslt/sdope/: docbook.xsl  index.xsl  info.xsl  list.xsl  objects.xsl  revision.xsl  sect.xsl  styles.xsl  table.xsl
doc/xslt/site/: faq.xsl  repository.xsl  sdope.xsl
lib/: Makefile.in  modxslt-debug.c  modxslt-doc.c  modxslt-io.c  modxslt-libxml.c  modxslt-memory.c  modxslt-opr-bool.c  modxslt-opr-cmp.c  modxslt-table-algo.c  modxslt-table.c  modxslt-url.c
lib/modxslt0/: modxslt-debug.h  modxslt-internal.h  modxslt-macro.h  modxslt-memory.h  modxslt-proto.h  modxslt-system.h.in  modxslt-version.h  modxslt.h
lib/modxslt1/: modxslt-debug.h  modxslt-info.h  modxslt-proto.h  modxslt-system.h.in  modxslt-table.h  modxslt-version.h  modxslt.h
lib/parser/: Makefile.in  README  modxslt-cmp-opr.gperf  modxslt-cmp-opr.gperf.c  modxslt-screen-expr.lex  modxslt-screen-expr.lexer.c  modxslt-screen-expr.parser.c  modxslt-screen-expr.parser.h  modxslt-screen-expr.parser.output  modxslt-screen-expr.y
patches/: libxslt.before-1.0.32.diff
patches/libxml-2.5.7/: libxml.httpcontextexport.diff  libxml.httpstatus.diff  libxml.setglobalstate.diff
patches/libxml-2.6.6/: libxml.httpcontextexport.diff  libxml.httpstatus.diff
patches/libxslt-1.0.33/: libxslt.fallback.diff  libxslt.genericerror.diff
sapi/apache1/: Makefile.in  modxslt-helpers.c  modxslt.c  modxslt.h
sapi/apache2/: Makefile.in  modxslt-helpers.c  modxslt.c  modxslt.h
sapi/none/: Makefile.in
sapi/proxy/: PLANS
tools/: c99-strip.sh  changelog-txt  changelog-xml  dbg-extract  release  snapshot  und-symb.sh  update_docs.py  upload
tools/data/: prefix-faq.pxml  prefix-sdope.pxml  tla.changelog  tla.description
tools/include/: config
utils/: Makefile.in  modxslt-config.pre.in  modxslt-parse.c  modxslt-perror.c
